--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,12 @@ hs_err_pid*
 .gradle/
 .idea/
 build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
